<resources>
    <string name="facebook_app_id">1036797793020930</string>
    <string name="app_name">English Vocabulary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="title_activity_vocabulary">VocabularyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_tab_test_listen">Kỹ năng nghe</string>
    <string name="txt_tab_test_remember">Kỹ năng nhớ</string>
    <string name="txt_true">ĐÚNG</string>
    <string name="txt_skip">BỎ QUA</string>
    <string name="txt_num_ques">Câu số:</string>
    <string name="txt_answers">Nhập đáp án...</string>
    <string name="txt_suggest">Gợi ý Tiếng Việt</string>
    <string name="txt_btn_start">Bắt đầu</string>
    <string name="txt_btn_answers">Trả lời</string>
    <string name="txt_btn_repeat">Nghe lại</string>
    <string name="txt_btn_skip">Bỏ qua</string>
    <string name="txt_completet">Hoàn thành</string>
    <string name="txt_msg_part1">Bạn trả lời được "</string>
    <string name="txt_msg_part2">" trên tổng số "</string>
    <string name="txt_msg_part3">" Câu. </string>
    <string name="txt_msg_part4">Bạn có muốn chơi tiếp? </string>
    <string name="txt_ok">Có</string>
    <string name="txt_no">Không</string>
    <string name="txt_copyright">Created by ITPSoft</string>
    <string name="hint_fullname">Tên đầy đủ</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_confirm_password">Nhập lại mật khẩu</string>
    <string name="password">Mật khẩu</string>
    <string name="alert_empty">Trường này không được trống</string>
    <string name="alert_fullname">Nội dung không được quá 30 ký tự</string>
    <string name="alert_format">Nội dung không được ít hơn 6 hoặc quá 30 ký tự. Không được chứa ký tự đặc biệt</string>
    <string name="alert_pass_username_wrong">Sai tài khoản hoặc mật khẩu</string>
    <string name="alert_pass_unequal_confirm">Xác nhận mật khẩu chưa trùng</string>
    <string name="alert_error_try_again">Có lỗi xảy ra, vui lòng thử lại</string>
    <string name="alert_success">Thành công</string>
    <string name="please_wait">Vui lòng đợi ...</string>
    <string name="version">Số phiên bản:</string>
    <string name="current_version">1.0</string>
    <string name="group_development">Nhóm phát triển:</string>
    <string name="leader">Nguyễn Thanh Bản</string>
    <string name="team_leader">Đỗ Viết Ngà</string>
    <string name="member1">Đinh Thế Luân</string>
    <string name="member2">Nguyễn Thanh Tú</string>
    <string name="feed_back">Phản hồi</string>
    <string name="name_company">Trung tâm phát triển phần mềm ITPSOFT</string>
    <string name="address_company">144 Xuân Thủy, Cầu Giấy, Hà Nội</string>
    <string name="phone_company">04 3754 6732 Hotline: 0963 72 65 65</string>
    <string name="website_company"><u>itplus-academy.edu.vn</u></string>
    <string name="email_company">info@itplus-academy.edu.vn</string>
    <string name="copyright_company">Copyright © 2011 All Rights Reserved.</string>
    <string name="send">Góp ý</string>
    <string name="fail">Thất bại</string>
    <string name="test">Luyện tập</string>
    <string name="popub_random_voca">Hiển thị từ ngẫu nhiên</string>
    <string name="choose_topic">Chọn chủ đề hiển thị</string>
    <string name="choose_notifications">Chọn cách thông báo</string>
    <string name="choose_number_voca">Chọn số từ hiển thị</string>
    <string name="done">Xong</string>
    <string name="after_lock_on">Sau khi mở khoá màn hình</string>
    <string name="after_2_h">Sau mỗi 2 giờ</string>
    <string name="after_4_h">Sau mỗi 4 giờ</string>
    <string name="after_6_h">Sau mỗi 6 giờ</string>
    <string name="after_8_h">Sau mỗi 8 giờ</string>
    <string name="one_voca">Một từ</string>
    <string name="two_voca">Hai từ</string>
    <string name="three_voca">Ba từ</string>
    <string name="four_voca">Bốn từ</string>
    <string name="five_voca">Năm từ</string>
    <string name="must_choose_one">Bạn phải chọn ít nhất một chủ đề!</string>
    <string name="turn_off_popub">Tắt hiển thị từ ngẫu nhiên</string>
    <string name="turn_on_popub">Bật hiển thị từ ngẫu nhiên</string>
    <string name="close">Đóng</string>
    <string name="ev">Từ vựng tiếng Anh</string>
    <string name="list_topic">Danh sách chủ đề</string>
    <string name="sync">Đồng bộ</string>
    <string name="reminds_study_time">Nhắc nhở t.g học</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="add_topic">Thêm chủ đề</string>
    <string name="error">Lỗi</string>
    <string name="exits">Đã tồn tại</string>
    <string name="exits_voca">Từ này đã tồn tại</string>
    <string name="added">Thêm thành công</string>
    <string name="edited">Sửa thành công</string>
    <string name="same">Giống tên cũ</string>
    <string name="name_empty">Chưa nhập tên</string>
    <string name="hint_name">Nhập tên</string>
    <string name="edit">Sửa</string>
    <string name="rename">Đổi tên</string>
    <string name="insert_new_name">Nhập tên mới</string>
    <string name="delete">Xóa</string>
    <string name="save">Lưu lại</string>
    <string name="confirmed_deleted">Xác nhận xóa</string>
    <string name="deleted">Đã xóa</string>
    <string name="really_delete">Bạn có thật sự muốn xóa:</string>
    <string name="topic_empty">Không có từ vựng trong chủ đề này</string>
    <string name="dont_save">Thay đổi chưa được lưu lại</string>
    <string name="change_success">Thay đổi thành công</string>
    <string name="stop">Dừng</string>
    <string name="start_app">Mở ứng dụng</string>
    <string name="note">Đã đến giờ học nhấn vào "Mở ứng dụng" để bắt đầu.</string>
    <string name="quick_question">QUICK QUESTION</string>
    <string name="gameover">GAME OVER!</string>
    <string name="new_score">NEW SCORE!</string>
    <string name="replay">Chơi lại</string>
    <string name="start">Bắt đầu</string>
    <string name="yes">Đúng</string>
    <string name="no">Sai</string>
    <string name="score">Điểm</string>
    <string name="hight_score">Điểm cao</string>
    <string name="meant_to_be">có nghĩa là</string>
    <string name="guide">Game đơn giản với các câu hỏi trả lời nhanh, dữ liệu lấy từ kho từ của bạn. </string>
    <string name="finish">GOOD!</string>
    <string name="het_cau_hoi">Hết câu hỏi</string>
    <string name="kho_tu_rong">Kho từ vựng rỗng.</string>
    <string name="game">Trò chơi</string>
    <string name="about">Giới thiệu</string>
    <string name="more_app">Ứng dụng khác</string>
    <string name="guide_detail">Hướng dẫn</string>
    <string name="click">Click để xem chi tiết</string>
    <string name="null_data">Không đủ từ để chơi trò chơi</string>
    <string name="null_data_popup">Không có từ để sử dụng chức năng này</string>
    <string name="exits_vocabulary">Từ này đã tồn tại ở chủ đề: "</string>
    <string name="warning">(Nếu bạn xóa thì toàn bộ từ trong chủ đề này cũng bị xóa)</string>
    <string name="add_vocabulary">Thêm</string>
    <string name="add">Thêm</string>
    <string name="update">Cập nhật</string>
    <string name="edit_topic_name">Đổi tên chủ đề</string>
    <string name="topic_name"><i>Tên chủ đề:</i></string>
    <string name="cancel">Hủy bỏ</string>
    <string name="vietnamese">Tiếng việt</string>
    <string name="empty">Bạn phải nhập trường này</string>
    <string name="english">Nhập từ tiếng anh</string>
    <string name="vn">Nghĩa tiếng việt</string>
    <string name="waiting">Đang đồng bộ...</string>
    <string name="sync_success">Đồng bộ thành công</string>
    <string name="logout_success">Đăng xuất thành công</string>
    <string name="load_data">Đang tải dữ liệu</string>
    <string name="cancel_sync">Đang đồng bộ bạn có thực sự muốn hủy?</string>
    <string name="internet_false">Không kết nối được tới server do server đang bảo trì hoặc điện thoại của bạn không bật kết nối gprs/3g/wifi.</string>
    <string name="api_push_insert">http://itplus-academy.edu.vn/service/insert.php</string>
    <string name="api_push_update">http://itplus-academy.edu.vn/service/update.php</string>
    <string name="api_push_delete">http://itplus-academy.edu.vn/service/delete.php</string>
    <string name="api_get_all_data">http://itplus-academy.edu.vn/service/alldata.php</string>
    <string name="api_register">http://itplus-academy.edu.vn/service/register.php</string>
    <string name="api_login">http://itplus-academy.edu.vn/service/login.php</string>
    <string name="api_feedback">http://itplus-academy.edu.vn/service/feedback.php</string>
    <string name="api_login_facebook">http://192.168.137.6:8080/ServicesEnglishVocabulary/rest/user/facebook</string>
    <string name="number_vocabulary">Số từ vựng: "</string>
    <string name="banner_ad_unit_id">ca-app-pub-8772406902354164/4885607139</string>
</resources>