<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <!-- Action-bar looking view -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_dimen"
        android:background="@color/actionBar">

        <ImageView
            android:id="@+id/drawer_indicator"
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="start"
            android:background="@drawable/drawer_selector"
            android:scaleType="centerInside"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <TextView
            android:id="@+id/indicator_style"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/drawer_selector"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:text="@string/quick_question"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="right"
            android:background="@drawable/drawer_selector"
            android:scaleType="centerInside" />
    </LinearLayout>
    <!-- End Actionbar-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/quick_question"
                android:textColor="@color/actionBar"
                android:textSize="45dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/guide"
                android:textColor="#424242"
                android:textSize="20dp" />

            <Button
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_skip_selector"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/start"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/play_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="120dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english"
                        android:textSize="42dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meant_to_be"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/vietnamese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vietnamese"
                        android:textSize="42dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/bg_btn_skip_selector"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/yes"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/bg_btn_skip_selector"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/no"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gameOver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/game_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="bottom"
                android:text="@string/gameover"
                android:textColor="@color/gameover"
                android:textSize="50dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="150dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/score"
                        android:textColor="#424242"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#424242"
                        android:textSize="100dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:minWidth="150dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hight_score"
                        android:textColor="#424242"
                        android:textSize="22dp" />

                    <TextView
                        android:id="@+id/hight_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="#424242"
                        android:textSize="100dp" />
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_skip_selector"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="Chơi lại"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>