<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_dimen"
        android:background="@color/actionBar">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="start"
            android:background="@drawable/drawer_selector"
            android:scaleType="centerInside"
            android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_dimen"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/drawer_selector"
            android:gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:singleLine="true"
            android:text="@string/add_topic"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/actionbar_dimen"
            android:layout_height="@dimen/actionbar_dimen" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edt_ansers"
                android:maxHeight="200dp"
                android:minHeight="45dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="12dp"
                android:lines="1"
                android:hint="@string/hint_name"
                android:maxLines="1"
                android:singleLine="true"
                android:paddingRight="45dp"
                android:maxLength="30"/>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="bottom|right"
                android:padding="12dp"
                android:src="@drawable/delete_selector"
                android:visibility="invisible"/>
        </FrameLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_btn_skip_selector"
            android:text="@string/add"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
